[package]
name = "wrapping"
version = "0.1.0"
authors = ["Dan Bruder <danb@structionsite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
sled = "0.34.6"
tokio = {version = "0.2.0", features = ["full"]}
serde = "1.0.119"
serde_json = "1.0.61"
sled-extensions = {version = "0.2.0" , features =["json"]}
uuid = {version = "0.8.2", features = ["v4", "serde"]}
